[gd_scene load_steps=5 format=2]

[ext_resource path="res://FlowerVine.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 100 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 20, 10, 2 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 20, 200, 2 )

[node name="FlowerVine" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -100 )
shape = SubResource( 1 )
disabled = true

[node name="DisplaySprout" type="Node2D" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="DisplaySprout"]
position = Vector2( 0, -5 )
mesh = SubResource( 2 )

[node name="DisplayFull" type="Node2D" parent="."]
visible = false

[node name="MeshInstance2D" type="MeshInstance2D" parent="DisplayFull"]
position = Vector2( 0, -100 )
mesh = SubResource( 3 )
